[package]
name = "findfont"
version = "0.1.2"
edition = "2024"
description = "find font by file name"
categories = ["filesystem"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AllenDang/findfont-rs"
repository = "https://github.com/AllenDang/findfont-rs"
keywords = ["font"]
exclude = ["/.github", ".gitignore"]
rust-version = "1.85.0"

[dependencies]
